--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.2",
     "next": "14.1.3",
+    "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,6 +22,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
