--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ POSTGRES_DB=bookwise
 POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
+
+CONNECTION_STRING=postgresql://postgres:postgres@localhost:5432/bookwise
