--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "npx drizzle-kit generate:pg",
+    "migrate": "npx tsx ./src/infra/database/migrate.ts"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
@@ -27,6 +29,7 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.7.1",
     "typescript": "^5"
   }
 }
