--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "npx drizzle-kit generate:pg",
-    "migrate": "npx tsx ./src/infra/database/migrate.ts"
+    "migrate": "npx tsx ./src/infra/database/migrate.ts",
+    "studio": "npx drizzle-kit studio --config drizzle.config.ts"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@tanstack/react-query": "^5.36.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.2",
     "next": "14.1.3",
+    "pg": "^8.11.5",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18"
@@ -24,7 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.21.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
