--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "npx drizzle-kit generate:pg",
+    "generate": "npx drizzle-kit generate --",
     "migrate": "npx tsx ./src/infra/database/migrate.ts",
     "studio": "npx drizzle-kit studio --config drizzle.config.ts"
   },
@@ -20,7 +20,8 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
