chore: install next-auth

--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 
 CONNECTION_STRING=postgresql://postgres:postgres@localhost:5432/bookwise
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET="DovWYXgtrt9F03GSd2CCTZTrQbMgFrdyvilMU9Pf2WU="
+
+# OAuth 
+GOOGLE_CLIENT_ID=643192714428-lfg9dr24f4g9cdohcjr8rhvc124jpevf.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GITHUB_CLIENT_ID=Ov23liDFreYQnvf95fMe
+GITHUB_CLIENT_SECRET=01634ceb28f881440f22b08136ee9aa7c2a320ff
