--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.2",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "pg": "^8.11.5",
     "postgres": "^3.4.3",
     "react": "^18",
