feat: adjust env variables

--- a/.env
+++ b/.env
@@ -1,10 +1,5 @@
-POSTGRES_DB=bookwise
-POSTGRES_PASSWORD=postgres
-POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
-
-CONNECTION_STRING="postgresql://postgres:postgres@localhost:5432/bookwise"
-CONNECTION_STRING="postgresql://bookwise_db_owner:D5ZAEdfCSc6I@ep-gentle-forest-a5jqtwa7.us-east-2.aws.neon.tech/bookwise_db?sslmode=require"
+# old: CONNECTION_STRING="postgresql://postgres:postgres@localhost:5432/bookwise"
+DATABASE_URL="postgresql://bookwise_db_owner:D5ZAEdfCSc6I@ep-gentle-forest-a5jqtwa7.us-east-2.aws.neon.tech/bookwise_db?sslmode=require"
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="DovWYXgtrt9F03GSd2CCTZTrQbMgFrdyvilMU9Pf2WU="
