--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "npx drizzle-kit generate --",
-    "migrate": "npx tsx ./src/infra/database/migrate.ts",
-    "studio": "npx drizzle-kit studio --config drizzle.config.ts",
-    "seed": "npx tsx ./src/infra/database/seed.ts"
+    "generate": "npm run env:load npx drizzle-kit generate --",
+    "migrate": "npm run env:load npx tsx ./src/infra/database/migrate.ts",
+    "studio": "npm run env:load npx drizzle-kit studio --config drizzle.config.ts",
+    "seed": "npm run env:load npx tsx ./src/infra/database/seed.ts",
+    "env:load": "npx dotenv -e .env --"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
     "@phosphor-icons/react": "^2.0.15",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "^5.36.2",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "drizzle-orm": "^0.30.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
