--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,9 @@
   "plugins": ["react", "simple-import-sort", "@typescript-eslint"],
   "rules": {
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "parserOptions": {
     "sourceType": "module",
