--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.21.2",
     "eslint": "^8.57.0",
