feat: adjust env login variables

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ DATABASE_URL="postgresql://bookwise_db_owner:D5ZAEdfCSc6I@ep-gentle-forest-a5jqt
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="DovWYXgtrt9F03GSd2CCTZTrQbMgFrdyvilMU9Pf2WU="
 
+NEXT_PUBLIC_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
+
 # OAuth 
 GOOGLE_CLIENT_ID=643192714428-lfg9dr24f4g9cdohcjr8rhvc124jpevf.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
